--- a/.github/workflows/tests_linters.yaml
+++ b/.github/workflows/tests_linters.yaml
@@ -25,3 +25,5 @@ jobs:
         run: pip install .[dev]
       - name: Run linters 🖌️
         run: pre-commit run --all-files --verbose
+      - name: Run tests 🧪
+        run: pytest
