--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -2,13 +2,13 @@
 architecture_name: sebulba
 
 # --- Training ---
-num_envs: 2  # number of environments per thread.
+num_envs: 32  # number of environments per thread.
 
 # --- Evaluation ---
 evaluation_greedy: False # Evaluate the policy greedily. If True the policy will select
   # an action which corresponds to the greatest logit. If false, the policy will sample
   # from the logits.
-num_eval_episodes: 2 # Number of episodes to evaluate per evaluation.
+num_eval_episodes: 32 # Number of episodes to evaluate per evaluation.
 num_evaluation: 200 # Number of evenly spaced evaluations to perform during training.
 absolute_metric: True # Whether the absolute metric should be computed. For more details
   # on the absolute metric please see: https://arxiv.org/abs/2209.10485
@@ -17,3 +17,8 @@ absolute_metric: True # Whether the absolute metric should be computed. For more
 n_threads_per_executor: 2  # num of different threads/env batches per actor
 executor_device_ids: [0] # ids of actor devices
 learner_device_ids: [0] # ids of learner devices
+Pilpeline_queue_size : 2
+# The size of the pipeline queue determines the extent of off-policy training allowed. A larger value permits more off-policy training.
+# Too large of a value with too many actors will lead to all of the updates getting wasted in old episodes
+# Too small of a value and the utility of having multiple actors is lost.
+# A value of 1 leads to almost strictly on-policy training.
