--- a/mava/configs/arch/sebulba.yaml
+++ b/mava/configs/arch/sebulba.yaml
@@ -10,8 +10,9 @@ evaluation_greedy: False # Evaluate the policy greedily. If True the policy will
   # from the logits.
 num_eval_episodes: 32 # Number of episodes to evaluate per evaluation.
 num_evaluation: 200 # Number of evenly spaced evaluations to perform during training.
+num_absolute_metric_eval_episodes: 320  # Number of episodes to evaluate the absolute metric (the final evaluation).
 absolute_metric: True # Whether the absolute metric should be computed. For more details
-  # on the absolute metric please see: https://arxiv.org/abs/2209.10485
+# on the absolute metric please see: https://arxiv.org/abs/2209.10485
 
 # --- Sebulba devices config ---
 n_threads_per_executor: 2  # num of different threads/env batches per actor
