--- a/.github/workflows/tests_linters.yaml
+++ b/.github/workflows/tests_linters.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: Run linters 🖌️
         run: pre-commit run --all-files --verbose
       - name: Run tests 🧪
-        run: pytest
+        run: pytest -p no:warnings
