--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,19 +1,19 @@
 colorama
 distrax @ git+https://github.com/google-deepmind/distrax  # distrax release doesn't support jax > 0.4.13
 flashbax~=0.1.0
-flax
+flax==0.8.1
 gigastep @ git+https://github.com/mlech26l/gigastep
 hydra-core==1.3.2
 id-marl-eval @ git+https://github.com/instadeepai/marl-eval
-jax
-jaxlib
+jax==0.4.25
+jaxlib==0.4.25
 jaxmarl
 jumanji @ git+https://github.com/sash-a/jumanji
 matrax @ git+https://github.com/instadeepai/matrax
 mujoco==3.1.2
 mujoco-mjx==3.1.2
 neptune
-numpy
+numpy==1.26.4
 omegaconf
 optax
 protobuf~=3.20
