--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -9,7 +9,7 @@ id-marl-eval @ git+https://github.com/instadeepai/marl-eval
 jax==0.4.30
 jaxlib==0.4.30
 jaxmarl
-jumanji @ git+https://github.com/sash-a/jumanji  # Includes a few extra MARL envs
+jumanji @ git+https://github.com/sash-a/jumanji@b90360cd87d2a4397d575ad0f5efad0c71433b7d  # Includes a few extra MARL envs
 matrax @ git+https://github.com/instadeepai/matrax
 mujoco==3.1.3
 mujoco-mjx==3.1.3
