--- a/mava/configs/system/q_learning/rec_qmix.yaml
+++ b/mava/configs/system/q_learning/rec_qmix.yaml
@@ -1,4 +1,4 @@
-# --- Defaults REC-IDQN ---
+# --- Defaults REC-QMIX ---
 total_timesteps: 1e7 # Set the total environment steps.
 # If unspecified, it's derived from num_updates; otherwise, num_updates adjusts based on this value.
 num_updates: 156250 # Number of updates.
@@ -15,12 +15,12 @@ rollout_length: 2 # Number of environment steps per vectorised environment.
 epochs: 2 # Number of learn epochs per training data batch.
 
 # sizes
-buffer_size: 5000 # size of the replay buffer. Note: total size is this * num_devices
-sample_batch_size: 32  # size of training data batch sampled from the buffer
+buffer_size: 1000 # size of the replay buffer. Note: total size is this * num_devices
+sample_batch_size: 128  # size of training data batch sampled from the buffer
 sample_sequence_length: 20 # 21 transitions are sampled, giving 20 complete data points
 
 # learning rates
-q_lr: 3e-4  # the learning rate of the Q network network optimizer
+q_lr: 3e-5  # the learning rate of the Q network network optimizer
 max_grad_norm: 10 # value used to clip optimiser - set big for no clipping
 
 # other
